--- a/Bubble-Life/style.css
+++ b/Bubble-Life/style.css
@@ -149,6 +149,7 @@
     height: auto;
     background-image: url(./img/blank-paper-with-gift-box-flower-branch.jpg);
     background-attachment: fixed;
+    background-repeat: no-repeat;
     background-position: bottom center;
     background-size: 100%;
     padding: 50px;
