--- a/ShineSkin/css/style.css
+++ b/ShineSkin/css/style.css
@@ -631,9 +631,9 @@ footer>h1{
         height: 300px;
     }
     #Menu h1{
-        font-size: 30px;
+        font-size: 40px;
         width: 75%;
-        color: #6D9D17;
+        color: #fff;
     }
     header img{
         top: 45%;
