--- a/Bubble-Life/style.css
+++ b/Bubble-Life/style.css
@@ -147,11 +147,7 @@
 #About{
     width: 100%;
     height: auto;
-    background-image: url(./img/blank-paper-with-gift-box-flower-branch.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: bottom center;
-    background-size: cover;
+    background-color: #E5C6E5;
     padding: 50px;
 }
 #About>h1{
