--- a/Bubble-Life/style.css
+++ b/Bubble-Life/style.css
@@ -249,6 +249,7 @@
     padding: 30px 0 70px 0;
     background-image: url(./img/blank-paper-with-gift-box-flower-branch.jpg);
     background-attachment: fixed;
+    background-repeat: no-repeat;
     background-size: 100%;
     background-position: bottom center;
 }
