--- a/ShineSkin/css/style.css
+++ b/ShineSkin/css/style.css
@@ -5,6 +5,27 @@
     list-style: none;
     text-decoration: none;
 }
+.preloader{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e8e3d9f5;
+    z-index: 9;
+}
+.loader{
+    width: 100px;
+    height: 100px;
+    border: 12px dotted #acdf4e;
+    border-top: 12px dotted #6D9D17;
+    animation: spin 0.9s linear infinite;
+    border-radius: 50%;
+}
 .scrollbar{
     width: 100%;
     height: 8px;
@@ -570,9 +591,20 @@ footer{
 footer>h1{
     margin-left: 10px;
 }
+.hidden{
+    display: none;
+}
 @font-face {
     font-family: greatvibes;
     src: url(../fonts/GreatVibes-Regular.ttf);
+}
+@keyframes spin {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
 @media only screen and (max-width:992px){
     .logo strong{
@@ -775,6 +807,12 @@ footer>h1{
     }
 }
 @media only screen and (max-width:750px){
+    .loader{
+        width: 60px;
+        height: 60px;
+        border: 10px dotted #acdf4e;
+        border-top: 10px dotted #6D9D17;
+    }
     nav{
         padding: 10px 20px;
     }
