--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ ul{
     list-style: none;
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 ul>li{
     padding: 0 50px;
