--- a/ShineSkin/css/style.css
+++ b/ShineSkin/css/style.css
@@ -831,6 +831,7 @@ footer>h1{
     }
     .fixed-img{
         background-image: url(../img/headerImg.jpg);
+        background-position: top left;
     }
     #button{
         width: 35px;
