--- a/ShineSkin/css/style.css
+++ b/ShineSkin/css/style.css
@@ -830,7 +830,7 @@ footer>h1{
         color: #6D9D17;
     }
     .fixed-img{
-        background-position: top left;
+        background-position: top center;
     }
     #button{
         width: 35px;
