--- a/ShineSkin/css/style.css
+++ b/ShineSkin/css/style.css
@@ -830,6 +830,7 @@ footer>h1{
         color: #6D9D17;
     }
     .fixed-img{
+        background-image: url(../img/headerImg.jpg);
         background-position: top center;
     }
     #button{
