--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ li>a{
 #Home{
     width: 100%;
     height: 650px;
-    background-image: url(../images/5384517172790940279_121.jpg);
+    background-image: url(../images/HomeImg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
